Fix keyboard position on smaller screens

--- a/UJCSystem/ITJakub.Web.Hub/Content/Plugins/Keyboard/ITJakub.Keyboard.less
+++ b/UJCSystem/ITJakub.Web.Hub/Content/Plugins/Keyboard/ITJakub.Keyboard.less
@@ -1,7 +1,7 @@
 ﻿.keyboard-component {
     width: 0;    
     height: 0;
-    /*position: fixed;*/
+    position: absolute;
     top: 0;
     left: 0;
     
